<resources>
    <string name="app_name">The Freighter App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_dispatch">Dispatch</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_user_title">Register</string>
    <string name="register_subtitle">Enter details to register</string>
    <string name="register_user_name">Enter full name</string>
    <string name="register_email">Enter email</string>
    <string name="register_phone">Enter your phone number</string>
    <string name="sign_up_password">Enter your password</string>
    <string name="sign_up_confirm_password">Re-enter your password</string>
    <string name="log_in_text">Login instead</string>
    <string name="register_date_of_birth">Enter Date of Birth</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_subtitle">Enter details to sign in</string>
    <string name="sign_in_email">Enter your email</string>
    <string name="sign_in_password">Enter your password</string>
    <string name="account_log_in_forgot_password_prompt">Forgot password</string>
    <string name="create_account_text">Create new account</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="forgot_password_subtitle">Enter registered email to reset password</string>
    <string name="email_verification_subtitle">Verify Email</string>
    <string name="email_verification_btn">I Have Verified</string>
    <string name="phone_verification_subtitle">Enter code sent to your phone</string>
    <string name="enter_code">Enter SMS Code</string>
    <string name="two_fa_btn">Continue</string>
    <string name="tv_create_dispatch_title">Create Dispatch Request</string>
    <string name="tv_create_dispatch_subtitle">Enter details of new request</string>
    <string name="new_dispatch_choose_package_type">Select package type</string>
    <string name="dispatch_pickup_address">Enter pick up address</string>
    <string name="here">Here</string>
    <string name="dispatch_pickup_province">Enter pick up province</string>
    <string name="dispatch_pickup_country">Enter pickup country</string>
    <string name="dispatch_drop_off_province">Enter drop-off province</string>
    <string name="dispatch_drop_off_address">Enter drop-off address</string>
    <string name="dispatch_drop_off_country">Enter drop-off country</string>
    <string name="dispatch_package_weight">Enter package weight(kg)</string>
    <string name="dispatch_package_weight_contractors">Contract External</string>
    <string name="dispatch_pickup_date">Enter pick up date</string>
    <string name="new_dispatch_cancel_btn">Cancel</string>
    <string name="new_dispatch_save_btn">Save</string>
    <string name="new_dispatch_submit_btn">Submit</string>
    <string name="tv_choose_external_weigher_title">Choose External Weigher</string>
    <string name="choose_external_weigher_date">Enter weighing date</string>
    <string name="select_external_weigher">Select External Weigher</string>
    <string name="tv_choose_dispatch_driver_title">Choose Dispatch Driver</string>
    <string name="pick_up_date">Date: %s</string>
    <string name="tv_choose_dispatch_driver_confirm_btn">Confirm</string>
    <string name="tv_dispatch_details_title">Dispatch Details</string>
    <string name="call_dispatch_driver">call</string>
    <string name="negotiate_text">Negotiate</string>
    <string name="negotiation_one">N1 (Client Bargain)</string>
    <string name="enter_counter_price">Enter counter price (€)</string>
    <string name="negotiation_two">N2 (Driver Bargain)</string>
    <string name="negotiation_three">N3 (Client Bargain)</string>
    <string name="negotiation_info">The deal automatically cancels after 3 negotiations</string>
    <string name="tv_dispatch_negotiation_title">Dispatch Negotiation</string>
    <string name="confirm_service_creation_title">Confirm Dispatch Request</string>
    <string name="confirm_service_creation_text">A total fee of \u20AC%s will be deducted from your wallet balance\n\n
40% to driver before delivery \n\n60% to driver after delivery</string>
    <string name="confirm_service_delivery_title">Confirm Dispatch Delivery</string>
    <string name="confirm_service_delivery_text">The remaining 60% of the amount will be released to the driver.\n\nThis cannot be reversed</string>
    <string name="driver">Driver</string>
    <string name="client">Client</string>
    <string name="weigher">Weigher</string>
    <string name="invalid_full_name">Name is required</string>
    <string name="invalid_email">Valid email is required</string>
    <string name="underage">User must be above 18 years</string>
    <string name="invalid_phone_number">Valid phone number required</string>
    <string name="invalid_password">Password must contain one digit, uppercase, lowercase, special character and 8 characters</string>
    <string name="password_not_match">Password does not match</string>
    <string name="menu_logout">Logout</string>
    <string name="invalid_date_of_birth">Date of birth is invalid</string>
    <string name="missing_fields">Some fields are missing</string>
    <string name="register_vehicle_title">Register Vehicle</string>
    <string name="register_vehicle_subtitle">Enter details of your freighter vehicle</string>
    <string name="register_vehicle_plate_number">Enter vehicle plate number</string>
    <string name="register_driver_license_number">Enter your license number</string>
    <string name="location_one">Choose Freight Coverage 1</string>
    <string name="location_two">Choose Freight Coverage 2</string>
    <string name="tv_register_contact_title">Register Contact</string>
    <string name="tv_register_contact_subtitle">Enter details of your contact</string>
    <string name="register_contact_name">Enter contact person name</string>
    <string name="register_contact_phone_number">Enter contact person number</string>
    <string name="register_contact_address_line">Enter contact address line</string>
    <string name="register_contact_city">Enter Contact Address City</string>
    <string name="register_contact_country">Select contact address country</string>
    <string name="invalid_vehicle_plate_number">Vehicle plate number is required</string>
    <string name="invalid_driver_license">Driver license number is required</string>
    <string name="invalid_city">City is required</string>
    <string name="invalid_address_line">Address line is required</string>
    <string name="email_sent">Check email for verification link</string>
    <string name="email_not_verified">Please verify your email</string>
    <string name="phone_verification_title">2 FA</string>
    <string name="weigher_set_price_subtitle">Set your charge (per pound)</string>
    <string name="set_weigher_charge">Enter charge (€)</string>
    <string name="set_counter_charge">Enter counter offer (€)</string>
    <string name="invalid_date">Pickup date required</string>
    <string name="invalid_province">Pickup province required</string>
    <string name="tv_dispatch_destination">To: %s, %s</string>
    <string name="no_driver">No Driver Yet</string>
    <string name="no_destination">No Destination Yet</string>
    <string name="dispatch_driver">Driver: %s</string>
    <string name="dispatch_client">Client: %s</string>
    <string name="dispatch_weighing_date">Enter Weighing Date</string>
    <string name="weighing_cost">€ %s</string>
    <string name="invalid_weighing_date">Weighing Date Schedule Required</string>
    <string name="fill_details_before_weighing">Fill in all other details first</string>
    <string name="negotiation_zero">N0</string>
    <string name="add_dispatch">Create new dispatch</string>
    <string name="complete_draft">Complete draft</string>
    <string name="package_weight">Package weight (kg)</string>
    <string name="waiting_for_weight">Waiting for weigher to add weight</string>
    <string name="time_elapsed">This request is no longer available as the time has elapsed</string>
    <string name="driver_pickup_date">Pickup Date: %s</string>
    <string name="driver_pickup_package_type">Package Type: %s (%skg)</string>
    <string name="driver_pickup_address">Pickup Address (From):</string>
    <string name="driver_drop_off_address">Drop Of Address (To):</string>
    <string name="driver_interested_text">Interested</string>
    <string name="driver_not_interested_text">Not Interested</string>
    <string name="dispatch_detail_address">%s, %s, %s</string>
    <string name="already_interested">Already indicated interest</string>
    <string name="add_driver_search_time">Pending driver time elapsed. Add time?</string>
    <string name="time_added">Time added</string>
    <string name="still_pending_drivers">Pending drivers</string>
    <string name="no_driver_add_time">Mo driver, add pending time</string>
    <string name="interested_drivers_title">Interested Drivers</string>
    <string name="money_text">€%s</string>
    <string name="dispatch_detail_money_text">%s (%s)</string>
    <string name="tv_accept_price">Accept Price</string>
    <string name="accept_price_question">Do you accept the driver stated price (€%s)?</string>
    <string name="client_negotiate_text">Negotiate</string>
    <string name="tv_enter_picker_details">Add Picker Details</string>
    <string name="enter_picker_name">Enter picker name</string>
    <string name="enter_picker_phone_number">EntEnter picker phone number</string>
    <string name="wait_for_response">Wait for other party to respond</string>
    <string name="update_success">Update successful</string>
    <string name="okay">Okay</string>
    <string name="cancel_negotiation">Cancel Negotiation</string>
    <string name="negotiation_last_round_warning">This is the last negotiation round. Accept or Opt Out</string>
    <string name="negotiation_last_round_client_warning">Last negotiation round. Awaiting driver decision</string>
    <string name="dispatch_detail_date_created">Date created: %s</string>
    <string name="dispatch_date_picked_up">Date Picked Up: %s</string>
    <string name="dispatch_date_delivered">Date Delivered: %s</string>
    <string name="dispatch_pickup_address_text">Pickup Address</string>
    <string name="dispatch_drop_off_address_text">Drop-off Address</string>
    <string name="dispatch_detail_confirm_pickup">confirm pickup</string>
    <string name="dispatch_detail_confirm_delivery">confirm delivery</string>
    <string name="dispatch_navigate_pickup_address">navigate to pickup address</string>
    <string name="dispatch_navigate_drop_off_address">navigate to drop off address</string>
    <string name="dispatch_detail_picker_name">Picker: %s</string>
    <string name="dispatch_detail_request_tracking">Request location</string>
    <string name="location_request_sent">Location request sent</string>
    <string name="update_location">Update Location</string>
    <string name="show_in_map">show in map</string>
    <string name="not_available">N/A</string>
    <string name="location_updated">Location updated</string>
    <string name="not_rated">not rated</string>
    <string name="dispatch_weigher">Weigher: %s</string>
    <string name="date_weighed">Date weighed: %s</string>
    <string name="submit_rating">submit rating</string>
    <string name="wallet_balance_text">Balance</string>
    <string name="wallet_add_funds_text">Fund Wallet</string>
    <string name="wallet_history_title">Transaction History</string>
    <string name="no_wallet_account">You do not have a wallet</string>
    <string name="create_wallet">create wallet</string>
    <string name="fund_wallet_title">Fund Wallet</string>
</resources>